@@ -294,11 +294,6 @@
   <block id="fd007b3e14f8b08692b19f1bf6b9ae5b" category="paragraph"><block ref="fd007b3e14f8b08692b19f1bf6b9ae5b" category="inline-image-macro-rx" type="image"></block></block>
   <block id="5af4fd067fdcfc2366829de01d0a1fe4" category="paragraph">安裝最新版的Astra Trident。您現在可以新增儲存類別。</block>
   <block id="63c24f9994279591340cd89dcb19f3cd" category="summary">將託管Kubernetes叢集新增至Canvas之後、您可以使用Cloud Manager來管理儲存類別。</block>
-  <block id="76a5809985aa691391b31d5f20c17a42" category="admonition">如果未定義任何儲存類別、叢集將顯示需要採取行動。</block>
-  <block id="8e79c25356bb563e28e9ae0a108b960b" category="list-text">確認已安裝最新四個版本的Astra Trident之一。</block>
-  <block id="af1dab031c2b915817ef7d5169fdfcfb" category="list-text">按一下「*新增儲存類別*」來定義Kubernetes叢集的儲存類別。</block>
-  <block id="790a7b05e43ed5454554eef9671154f0" category="inline-image-macro">K8s資源頁面的快照、顯示「新增儲存類別」按鈕。</block>
-  <block id="bac110b30291a86e52ffa944c5ba6bb5" category="paragraph"><block ref="bac110b30291a86e52ffa944c5ba6bb5" category="inline-image-macro-rx" type="image"></block></block>
   <block id="6a8b915c7d54f345c01102c31e00f7e1" category="list-text">提供儲存類別的名稱、選取定義選項、然後按一下*下一步*。</block>
   <block id="26e844784a066d14af9464e1c0366829" category="inline-image-macro">顯示K8s儲存類別定義選項的快照。</block>
   <block id="2204d229f6006a328688918431aab2cf" category="paragraph"><block ref="2204d229f6006a328688918431aab2cf" category="inline-image-macro-rx" type="image"></block></block>
@@ -440,4 +435,11 @@
   <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">NetApp社群</block>
   <block id="ff6c37cbc252e306a6b4e390ec13cbc1" category="sidebar">Cloud Central部落格</block>
   <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">雲端網路研討會</block>
+  <block id="f03623a9e2b73dcb7ae9b7b837190c39" category="section-title">2022年5月8日</block>
+  <block id="6401d12bcac1f01899ab494a0a6d8edb" category="section-title">拖放以新增儲存類別</block>
+  <block id="0f808082ee99c2acfbcb1661162034f6" category="paragraph">您現在可以將Kubernetes叢集拖放到Cloud Volumes ONTAP 運作環境中、直接從Canvas.新增儲存類別。</block>
+  <block id="d23895cd28f2e8e5d3074279cea7aacf" category="inline-link-macro">新增儲存類別</block>
+  <block id="2556925e0b340fdd647987c6af7fbee9" category="paragraph"><block ref="2556925e0b340fdd647987c6af7fbee9" category="inline-link-macro-rx"></block></block>
+  <block id="1eec33c68401a6eebb58a392153f045b" category="admonition">如果未定義儲存類別、叢集將顯示需要採取行動。按兩下Canvas上的叢集、將會開啟動作頁面以新增儲存類別。</block>
+  <block id="a5cc9f7714a0767ece3c08caff06314d" category="list-text">從「畫版」中、將Kubernetes工作環境拖放到Cloud Volumes ONTAP 「支援」工作環境中、以開啟儲存類別精靈。</block>
 </blocks>
