@@ -17,19 +17,14 @@ summary: 將託管Kubernetes叢集新增至Canvas之後、您可以使用Cloud M
 將託管Kubernetes叢集新增至Canvas之後、您可以使用Cloud Manager來管理儲存類別。
 
 
-NOTE: 如果未定義任何儲存類別、叢集將顯示需要採取行動。
+NOTE: 如果未定義儲存類別、叢集將顯示需要採取行動。按兩下Canvas上的叢集、將會開啟動作頁面以新增儲存類別。
 
 
 
 == 新增儲存類別
 
 .步驟
-. 按兩下Canvas上的Kubernetes工作環境、或按一下*輸入工作環境*。
-. 確認已安裝最新四個版本的Astra Trident之一。
-. 按一下「*新增儲存類別*」來定義Kubernetes叢集的儲存類別。
-+
-image:screenshot-k8s-add-storage-class.png["K8s資源頁面的快照、顯示「新增儲存類別」按鈕。"]
-
+. 從「畫版」中、將Kubernetes工作環境拖放到Cloud Volumes ONTAP 「支援」工作環境中、以開啟儲存類別精靈。
 . 提供儲存類別的名稱、選取定義選項、然後按一下*下一步*。
 +
 image:screenshot-k8s-define-storage-class.png["顯示K8s儲存類別定義選項的快照。"]
